Able to switch between live and sandbox

--- a/website/configs/config.ini
+++ b/website/configs/config.ini
@@ -13,6 +13,8 @@ logo			= images/srv_logo.png
 client_id		= YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY...
 client_secret	= XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX...
 brand_name		= My Super Server Company
+;Change this to 'LIVE' (without quote) to go live - don't forget to update your client_id and client_secret too !
+mode			= SANDBOX
 
 [steam]
 ;Steam API key, get it from there : https://steamcommunity.com/dev/apikey
